<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather Information</string>
    <string name="location">Location</string>
    <string name="information">Information</string>
    <string name="map">Map</string>
    <string name="city_research">City research</string>
    <string name="lisbon">Lisbon</string>
    <string name="madrid">Madrid</string>
    <string name="paris">Paris</string>
    <string name="rome">Rome</string>
    <string name="london">London</string>
    <string name="prague">Prague</string>
    <string name="dublin">Dublin</string>
    <string name="vienna">Vienna</string>
    <string name="current_location">Current location</string>
    <string name="search">Search</string>
    <string name="select_a_city_example">Select a city example:</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="failed">An error occurred</string>
    <string name="longitude">Longitude:</string>
    <string name="country_code">Country Code:</string>
    <string name="resume">Resume:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="timezone">Timezone:</string>
    <string name="description">Description:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="visibility">Visibility:</string>
    <string name="temperature">Temperature:</string>
    <string name="sunset">Sunset:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="latitude">Latitude:</string>
    <string name="select_first">Select a location first</string>
    <string name="failed_to_recover_location">Failed to recover your current location</string>
    <string name="in_order_to">In order to use this function, please share your GPS location</string>
    <string name="button_only">Search button is only valid for button options</string>
    <string name="open_map">Check on map</string>
    <string name="readed_how_to_use">HOW_TO_USE</string>
    <string name="understood">Understood</string>
</resources>