<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ProgressBar
        android:id="@+id/progress_bar_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/city_research"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="true"
            tools:text="Rio de Janeiro" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="vertical">

            <RadioButton
                android:id="@+id/button_lisbon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lisbon" />

            <RadioButton
                android:id="@+id/button_madrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/madrid" />

            <RadioButton
                android:id="@+id/button_paris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paris" />

            <RadioButton
                android:id="@+id/button_copenhagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copenhagen" />

            <RadioButton
                android:id="@+id/button_rome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rome" />

            <RadioButton
                android:id="@+id/button_london"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/london" />

            <RadioButton
                android:id="@+id/button_prague"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prague" />

            <RadioButton
                android:id="@+id/button_dublin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dublin" />

            <RadioButton
                android:id="@+id/button_vienna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vienna" />

            <RadioButton
                android:id="@+id/button_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_location" />
        </RadioGroup>
    </ScrollView>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_a_city_example"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/black"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>